deploy: 9728cc381ae4b438b1a946092b9ae9b089134496

--- a/build_tools/premake.html
+++ b/build_tools/premake.html
@@ -501,7 +501,7 @@ util(&quot;my-untility&quot;)
 </code></pre>
 <h2 id="the-machinery-project-recommendation"><a class="header" href="#the-machinery-project-recommendation">The Machinery Project Recommendation</a></h2>
 <p>We recommend you to make use of one single premake file that manages all your plugins at one build. This avoids the need to go in each of the folder to build your project. As recommended in the the chapter <a href="https://ourmachinery.github.io/themachinery-books//getting_started/project_setup.html#possible-folder-structure-for-a-project">Project Setup: Possible folder structure for a project</a> we recommend also to seperate your plugins into sub folders. The following image shows a potential setup for your game plugins:</p>
-<p><img src="https://www.dropbox.com/s/l1429g7p5xx8kj2/tm_guide_possible_subfolder.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/l1429g7p5xx8kj2/tm_guide_possible_subfolder.png?raw=1" alt="" /></p>
 <p>In here we have one single <code>premake</code> file and a single <code>libs.json</code> as well as the <code>libs</code> folder. This allows you to run <code>tmbuild</code> just in this folder and all plugins or the ones you want to build can be built at once. </p>
 <p>In this case the premake file could look like this:</p>
 <blockquote>
