--- a/collaboration.html
+++ b/collaboration.html
@@ -189,7 +189,7 @@ same machine (just start two instances of the_machinery.exe) and connect using t
 <p>You have three options to host or join a collaboration Session:</p>
 <h3 id="host-a-lan-server"><a class="header" href="#host-a-lan-server">Host a LAN Server</a></h3>
 <p>Host a server on your LAN. The system will choose a free port on your machine for hosting. Other users on the same LAN can join your session by choosing <em>Join LAN Server</em> and selecting your machine.</p>
-<p><img src="https://www.dropbox.com/s/0amm9km2jiejxx1/tm_guide_collab_host_local.png?dl=1" alt="Host locally" /></p>
+<p><img src="https://www.dropbox.com/s/0amm9km2jiejxx1/tm_guide_collab_host_local.png?raw=1" alt="Host locally" /></p>
 <ol>
 <li>Select &quot;Host LAN Server&quot; from the dropdown</li>
 <li>Your Handle, in case of hosting this will be the name the session will have as well as your username.</li>
@@ -197,7 +197,7 @@ same machine (just start two instances of the_machinery.exe) and connect using t
 </ol>
 <h4 id="join-a-local-server"><a class="header" href="#join-a-local-server">Join a local Server</a></h4>
 <p>When you open the collaboration tab the default view is the &quot;Join LAN Server&quot; view. In this view you can join a local server.</p>
-<p><img src="https://www.dropbox.com/s/1cx17p05swuu6mg/tm_guide_collab_join_local.png?dl=1" alt="The default view of the collab tab is the join local option" /></p>
+<p><img src="https://www.dropbox.com/s/1cx17p05swuu6mg/tm_guide_collab_join_local.png?raw=1" alt="The default view of the collab tab is the join local option" /></p>
 <ol>
 <li>Select &quot;Join LAN Server&quot; from the dropdown</li>
 <li>You can select a collaboration session. If there is no session available this field is disabled.</li>
@@ -206,7 +206,7 @@ same machine (just start two instances of the_machinery.exe) and connect using t
 </ol>
 <h3 id="host-internet-server"><a class="header" href="#host-internet-server">Host Internet Server</a></h3>
 <p>Host a server that can be accessed over the internet on a specified port.</p>
-<p><img src="https://www.dropbox.com/s/q3q7ltunpqmepeq/tm_guide_collab_host_internet.png?dl=1" alt="Host Internet Server" /></p>
+<p><img src="https://www.dropbox.com/s/q3q7ltunpqmepeq/tm_guide_collab_host_internet.png?raw=1" alt="Host Internet Server" /></p>
 <ol>
 <li>You can select the port of your session. If your router does not support <strong>UPnP</strong> you might have to port forward your selected port.</li>
 <li>Your Handle, the name the other user can see on their side.</li>
@@ -218,7 +218,7 @@ same machine (just start two instances of the_machinery.exe) and connect using t
 </blockquote>
 <h4 id="join-an-internet-server"><a class="header" href="#join-an-internet-server">Join an internet Server</a></h4>
 <p>To connect, an external user would choose <em>Join Internet Server</em> and specify your external IP address.</p>
-<p><img src="https://www.dropbox.com/s/n1fhqm7p3jr6yx8/tm_guide_collab_join_internet.png?dl=1" alt="Join a Internet Server" /></p>
+<p><img src="https://www.dropbox.com/s/n1fhqm7p3jr6yx8/tm_guide_collab_join_internet.png?raw=1" alt="Join a Internet Server" /></p>
 <ol>
 <li>You need the Online Host's IP Address. In the format: <code>89.89.89.89:1234</code>. </li>
 <li>Your Handle, the name the other user can see on their side.</li>
@@ -234,10 +234,10 @@ same machine (just start two instances of the_machinery.exe) and connect using t
 <p><strong>Note:</strong> Host and client cannot be invisible otherwise invites wont work!</p>
 </blockquote>
 <p>After this setting is enabled you need to add The Machinery as a game so others can see you are playing it. This allows you now to invite your friends via the Engine into your session and vice versa.</p>
-<p><img src="https://www.dropbox.com/s/6e6lanbsz5etfkm/tm_guide_collab_discord_host.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/6e6lanbsz5etfkm/tm_guide_collab_discord_host.png?raw=1" alt="" /></p>
 <h2 id="connected"><a class="header" href="#connected">Connected</a></h2>
 <p>When you are connected to a collaboration session you have this view. In the connected view you can chat with the other participants of the chat. The session will <strong>not</strong> terminate / disconnect if you close the tab.</p>
-<p><img src="https://www.dropbox.com/s/ehg9x2l8frvlo04/tm_guide_collab_connected.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/ehg9x2l8frvlo04/tm_guide_collab_connected.png?raw=1" alt="" /></p>
 
                     </main>
 
