--- a/creation_graphs/intro_unity.html
+++ b/creation_graphs/intro_unity.html
@@ -156,7 +156,7 @@
                     <main>
                         <h1 id="creation-graphs-for-unity-developers"><a class="header" href="#creation-graphs-for-unity-developers">Creation Graphs for Unity Developers</a></h1>
 <p>When a creation graph is used as a surface shader it most closely resembles to Unity's shader graph. This is what we will focus on first.</p>
-<p><img src="https://www.dropbox.com/s/lg5dir5rxbz8c6l/tm_guide_creation_graph_unity.png?dl=1" alt="Simple surface shader" /></p>
+<p><img src="https://www.dropbox.com/s/lg5dir5rxbz8c6l/tm_guide_creation_graph_unity.png?raw=1" alt="Simple surface shader" /></p>
 <p>In the example above the editor's layout was made to resemble Unity's shader graph view. When creating a material shader you need to have a <code>Shader Instance</code> output node. From here we can specify our shader by adding node to the left of the <code>Shader Instance</code> node. In this example the <code>Lit</code> node closely resembles Unity's <code>PBR Master</code> node.</p>
 
                     </main>
