--- a/creation_graphs/node_types.html
+++ b/creation_graphs/node_types.html
@@ -156,10 +156,10 @@
                     <main>
                         <h1 id="node-types"><a class="header" href="#node-types">Node types</a></h1>
 <p>Nodes in the creation graph can be subdivided into four types, understanding the difference between these nodes is important when creating new nodes. The diagram below shows how each node can be categorized.</p>
-<p><img src="https://www.dropbox.com/s/h4uni5g7syk0zgn/tm_guide_creation_graph_node_types_graph.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/h4uni5g7syk0zgn/tm_guide_creation_graph_node_types_graph.png?raw=1" alt="" /></p>
 <p>GPU nodes are somewhat special as they will be compiled down into a single shader instead of being interpreted like the CPU part of the creation graph. Note that GPU nodes also have a different background color to distinguish them. GPU nodes will not connect to any CPU node unless their output is a <code>Shader Instance</code>, this is the point at which the GPU portion of the graph is compiled and passed to the CPU.</p>
 <p>The CPU portion of a creation graph is very similar to the entity graph in terms of layout with one exception. The creation graph often works by querying <code>output nodes</code> from the creation graph and working its way back from there. <code>event nodes</code> on the other hand allow you to follow the same flow as the entity graph, beginning from some event and continuing into other nodes. </p>
-<p><img src="https://www.dropbox.com/s/poi2rg73gttdixz/tm_guide_creation_graph_node_types_practical.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/poi2rg73gttdixz/tm_guide_creation_graph_node_types_practical.png?raw=1" alt="" /></p>
 <p>In the example above you can see a creation graph that uses the <code>Draw Call</code> and <code>Bounding Volume</code> output nodes. A Creation Graph with these kinds of nodes is commonly found living under the Render Component, since such a componen will automatically process any draw calls. The inputs to this graph are: a DCC mesh and a <code>Lit Shader Instance</code>, where the latter can be thought of as a shader or material. Note the <code>Variable</code> GPU node that is used to pass the color from the CPU side to the GPU side, this is the only way to connect CPU nodes to GPU nodes.
 Currently we support the following output nodes, note that multiple of these can be present in a single creation graph.</p>
 <table><thead><tr><th><strong>Name</strong></th><th><strong>Information</strong></th></tr></thead><tbody>
