--- a/editing_workflows/import_assets.html
+++ b/editing_workflows/import_assets.html
@@ -221,7 +221,7 @@
 <p>The Machinery has three different ways of importing assets. The Import local files, Import remote files, Drag and Drop.</p>
 <h3 id="import-via-the-file-menu"><a class="header" href="#import-via-the-file-menu">Import via the file menu</a></h3>
 <p>The first method of important an asset is via the <strong>File</strong> menu. There, we have an entry called <em>Import File,</em> which opens a file dialog. There you can import any of the supported file formats. <em>Import File</em> allows for importing any supported asset archive of the type zip or 7zip. This archive will be unpacked and recursively checked for supported assets.
-<img src="https://www.dropbox.com/s/kb50fpjuqwz7o6o/tm_guide_import_assets.png?dl=1" alt="" /></p>
+<img src="https://www.dropbox.com/s/kb50fpjuqwz7o6o/tm_guide_import_assets.png?raw=1" alt="" /></p>
 <h3 id="import-from-url"><a class="header" href="#import-from-url">Import from URL</a></h3>
 <p>It is possible to import assets from a remote location. In the <strong>File</strong> menu, the entry <em>Import from URL</em> allows for importing any supported asset archive of the type zip or 7zip. This archive will be unpacked and recursively checked for supported assets.</p>
 <p><img src="https://paper-attachments.dropbox.com/s_8A68AE93396574AC0D937BFA8CFC626D302DBC4E0617A82A7B5162043ADD88EF_1615467083098_image.png" alt="" /></p>
