--- a/editing_workflows/prototype_workflow/index.html
+++ b/editing_workflows/prototype_workflow/index.html
@@ -169,7 +169,7 @@ other entities. </p>
 <p>So you can for example create an entity asset that represents a
 room, and then create a house entity that has a bunch of these room entities
 placed into it:</p>
-<p><img src="https://www.dropbox.com/s/2hpnogh7bff9jge/house-entity.png?dl=1" alt="Three Room entities placed to form a House entity." /></p>
+<p><img src="https://www.dropbox.com/s/2hpnogh7bff9jge/house-entity.png?raw=1" alt="Three Room entities placed to form a House entity." /></p>
 <h2 id="difference-between-a-prototype-an-instance-and-an-asset"><a class="header" href="#difference-between-a-prototype-an-instance-and-an-asset">Difference between a Prototype, an Instance and an Asset</a></h2>
 <p>We call the room asset a <em>prototype</em>, and we call each placed room entity an
 <em>instance</em> of that prototype. Note that prototypes are not special assets, any
@@ -196,7 +196,7 @@ or child entities on the overridden entity.</p>
 parents will automatically get overridden too. Let's modify the position of the barrel in the
 front-most room:</p>
 </blockquote>
-<p><img src="https://www.dropbox.com/s/uy0rzwhrjzen42i/override.png?dl=1" alt="Barrel position overridden." /></p>
+<p><img src="https://www.dropbox.com/s/uy0rzwhrjzen42i/override.png?raw=1" alt="Barrel position overridden." /></p>
 <p>The overridden entities and components are drawn in blue. We change the x and z components of the
 position to move the barrel. Note how the changed values are shown in white, while the values that
 are inherited from the prototype are shown in gray.</p>
