--- a/editing_workflows/simulation.html
+++ b/editing_workflows/simulation.html
@@ -163,7 +163,7 @@ tricky.)</p>
 allows you to see the runtime behavior of your entities. If you are building a game, the simulation
 mode would correspond to running the game.</p>
 <p>To <em>simulate</em> a scene, open a scene in the <em>Simulate</em> tab.</p>
-<p><img src="https://www.dropbox.com/s/7t8elpzqllqkqrb/simulate-tab.png?dl=1" alt="Simulate tab." /></p>
+<p><img src="https://www.dropbox.com/s/7t8elpzqllqkqrb/simulate-tab.png?raw=1" alt="Simulate tab." /></p>
 <p>You can use the controls in the tab to pause, play, or restart the simulation or change the
 simulation speed. Note that if you haven't added any simulation components to the scene, the
 <em>Simulate</em> tab will be just as static as the Scene tab. In order to get something to happen, you
