--- a/extending_the_machinery/application_hooks.html
+++ b/extending_the_machinery/application_hooks.html
@@ -170,7 +170,7 @@
 <li><a href="#overview">Overview</a></li>
 </ul>
 <h2 id="application-create"><a class="header" href="#application-create">Application Create</a></h2>
-<p><img src="https://www.dropbox.com/s/vsl0d53ty9rsvbi/tm_guide_app_hook_create.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/vsl0d53ty9rsvbi/tm_guide_app_hook_create.png?raw=1" alt="" /></p>
 <h2 id="update"><a class="header" href="#update">Update</a></h2>
 <p><strong>Important side note</strong> here <a href="https://ourmachinery.com/apidoc/foundation/plugin_callbacks.h.html#structtm_plugin_tick_i"><code>tm_plugin_tick_i</code></a> should <strong>not</strong> be used for <strong>gameplay</strong>. To manage your gameplay you should rely on the given gameplay hooks:</p>
 <ul>
@@ -183,13 +183,13 @@
 <p><strong>Note:</strong> Plugin reloads only happen if a plugin has been identified as replaced.</p>
 </blockquote>
 <h3 id="editor"><a class="header" href="#editor">Editor</a></h3>
-<p><img src="https://www.dropbox.com/s/ibyjx33p4lci62w/tm_guide_app_hooks_update_editor.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/ibyjx33p4lci62w/tm_guide_app_hooks_update_editor.png?raw=1" alt="" /></p>
 <h3 id="runner"><a class="header" href="#runner">Runner</a></h3>
-<p><img src="https://www.dropbox.com/s/9nq4ysh2gefzks1/tm_guide_app_hooks_update_runner.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/9nq4ysh2gefzks1/tm_guide_app_hooks_update_runner.png?raw=1" alt="" /></p>
 <h2 id="project-hooks"><a class="header" href="#project-hooks">Project Hooks</a></h2>
-<p><img src="https://www.dropbox.com/s/jtsk5df9rykp8di/tm_guide_app_hook_project.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/jtsk5df9rykp8di/tm_guide_app_hook_project.png?raw=1" alt="" /></p>
 <h2 id="application-shutdown"><a class="header" href="#application-shutdown">Application Shutdown</a></h2>
-<p><img src="https://www.dropbox.com/s/ecssnn4hvv42avi/tm_guide_app_hook_shutdown.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/ecssnn4hvv42avi/tm_guide_app_hook_shutdown.png?raw=1" alt="" /></p>
 <h2 id="overview"><a class="header" href="#overview">Overview</a></h2>
 <table><thead><tr><th>Interface</th><th>Description</th></tr></thead><tbody>
 <tr><td><code>TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)</code></td><td>Entry point for all plugins</td></tr>
