--- a/extending_the_machinery/plugin-assets.html
+++ b/extending_the_machinery/plugin-assets.html
@@ -199,7 +199,7 @@ version of The Machinery. Otherwise, the plugin will most likely crash.</p>
 <p><strong>Note:</strong> The asset plugin will store the path absolute.</p>
 </blockquote>
 <p>The plugin asset settings look as following:</p>
-<p><img src="https://www.dropbox.com/s/hc12tcagz448ffz/tm_guide_plugin_asset.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/hc12tcagz448ffz/tm_guide_plugin_asset.png?raw=1" alt="" /></p>
 <p>You would have to repeat the above described workflow every time you change the code of your plugin. This is very annoying, but do not worry hot-reloading comes to rescue!</p>
 <p>You can enable hot-reload for plugin assets by checking the <strong><em>Import When Changed</em> checkbox (1)</strong> in the plugin
 properties. If checked, the editor will monitor the plugin's import path for changes and if it
