--- a/extending_the_machinery/sample_plugin.html
+++ b/extending_the_machinery/sample_plugin.html
@@ -173,7 +173,7 @@ new <code>.c</code> file for the plugin together with some helper files for comp
 <p>The distribution already comes with pre-built .dlls for the sample plugins, such as
 <code>bin/plugins/tm_pong_tab.dll</code>. You can see this plugin in action by selecting <strong>Tab &gt; Pong</strong> in the
 editor to open up its tab:</p>
-<p><img src="https://www.dropbox.com/s/hats2jgr3wroahz/pong-tab.png?dl=1" alt="Pong tab." /></p>
+<p><img src="https://www.dropbox.com/s/hats2jgr3wroahz/pong-tab.png?raw=1" alt="Pong tab." /></p>
 <p><strong>Table of Content</strong></p>
 <ul>
 <li><a href="#what-are-the-build-requirements">What are the build Requirements</a></li>
