--- a/extending_the_machinery/write-a-plugin.html
+++ b/extending_the_machinery/write-a-plugin.html
@@ -196,7 +196,7 @@
 </blockquote>
 <h2 id="basic-plugin-template"><a class="header" href="#basic-plugin-template">Basic Plugin Template</a></h2>
 <p>The Engine provides an easy way to create plugins for you via the <strong>file -&gt; New Plugins</strong> menu. There you can choose default plugin templates. Let us choose the minimal plugin. They come with default files:</p>
-<p><img src="https://www.dropbox.com/s/jhrqv8t8bbhr20u/tm_tut_new_tab.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/jhrqv8t8bbhr20u/tm_tut_new_tab.png?raw=1" alt="" /></p>
 <p><em>In this case, we choose the Tab template. The only difference is that the <code>custom_tab</code> would be <code>minimal</code>.</em></p>
 <p><em>The folder structure for a minimal is called minimal.</em></p>
 <ul>
