--- a/extending_the_machinery/write-a-tab.html
+++ b/extending_the_machinery/write-a-tab.html
@@ -183,7 +183,7 @@
 <p><strong>Tip:</strong> Maybe store your plugin in a folder next to your game project.</p>
 </blockquote>
 <p>After this, we see that the Engine created some files for us.</p>
-<p><img src="https://www.dropbox.com/s/jhrqv8t8bbhr20u/tm_tut_new_tab.png?dl=1" alt="folder structure new plugin" /></p>
+<p><img src="https://www.dropbox.com/s/jhrqv8t8bbhr20u/tm_tut_new_tab.png?raw=1" alt="folder structure new plugin" /></p>
 <p>Now we need to ensure that we can build our project. In the root folder (The folder with the premake file), we can run <code>tmbuild</code> and see if there is no issue. We will build our projects once and generate the <code>.sln</code> file (on windows). </p>
 <p>If there is an issue, we should ensure we have set up the Environment variables correctly and installed all the needed dependencies. For more information, please read this <a href="https://ourmachinery.github.io/themachinery-books/build_tools/tmbuild.html">guide</a>.</p>
 <p>Now we can open the <code>.c</code> file with our favorite IDE. The file will contain the following content:</p>
