--- a/gameplay_coding/ecs/simulation_lifecycle.html
+++ b/gameplay_coding/ecs/simulation_lifecycle.html
@@ -156,7 +156,7 @@
                     <main>
                         <h1 id="overview-of-the-entity-context-lifecycle"><a class="header" href="#overview-of-the-entity-context-lifecycle">Overview of the Entity Context Lifecycle</a></h1>
 <p>This page describes the lifecycle of the entity context / the simulation and all its stages.</p>
-<p><img src="https://www.dropbox.com/s/vxq89spqcwzdvy8/tm_guide_ecs_life_cycle.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/vxq89spqcwzdvy8/tm_guide_ecs_life_cycle.png?raw=1" alt="" /></p>
 <h2 id="update-phases"><a class="header" href="#update-phases">Update Phases</a></h2>
 <p>In your Engine / Systems you an define in which Phase of the Update loop, your Engine / System shall run. This can be managed via the:  <code>.before_me</code>, <code>.after_me</code> and <code>.phase</code>  fields of your engine or system definition. </p>
 <p>Please keep in mind that the Scheduler will order your system based on what kind of components you might modify or not! This is why it is always recommended to say what kind of components your system/engine will operate on and what they will do with them (Write to them or not). Depending on your dependencies the scheduler will decide if your engine/system can run in parallel.</p>
