--- a/gameplay_coding/visual_scripting/debugger.html
+++ b/gameplay_coding/visual_scripting/debugger.html
@@ -159,10 +159,10 @@
 <blockquote>
 <p><strong>Note:</strong>  The Debugger only works if the simulate tab and the graph tab are open at the same time!</p>
 </blockquote>
-<p><img src="https://www.dropbox.com/s/80ld50b4n6ohjio/tm_guide_entity_graph_debugger_basic.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/80ld50b4n6ohjio/tm_guide_entity_graph_debugger_basic.png?raw=1" alt="" /></p>
 <p>You can find the Debugger when you click on the button in the upper toolbar with the bug symbol <strong>(1)</strong>. It will open the Debugger Overlay. Besides the &quot;Bug&quot; button, you can find a dropdown menu <strong>(2)</strong>. This dropdown menu lets you switch between Graph instances quickly. This is useful if the Graph is part of an Entity Prototype or itself a Subgraph prototype! </p>
 <h2 id="debug-overlay"><a class="header" href="#debug-overlay">Debug Overlay</a></h2>
-<p><img src="https://www.dropbox.com/s/wly93rk8vz97upm/tm_guide_entity_graph_debug_overlay.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/wly93rk8vz97upm/tm_guide_entity_graph_debug_overlay.png?raw=1" alt="" /></p>
 <p>In this overlay, you find three-tab:</p>
 <ol>
 <li><strong>Watch Wires;</strong> Contains all data wires you are watching.</li>
@@ -171,23 +171,23 @@
 </ol>
 <h2 id="watch-wires"><a class="header" href="#watch-wires">Watch Wires</a></h2>
 <p>Like in a normal code editor, you can hover over any data wire and observe the values during the execution. If a value changed, it would be red, otherwise white.</p>
-<p><img src="https://www.dropbox.com/s/cw86wtsfcb8sg50/tm_guide_entity_graph_watch_wires.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/cw86wtsfcb8sg50/tm_guide_entity_graph_watch_wires.png?raw=1" alt="" /></p>
 <p>This might be cucumber some and difficult for observing multiple wires. This is why you can add them to the watch wire list.</p>
-<p><img src="https://www.dropbox.com/s/1j09t2vxxk4t11b/tm_guide_entity_graph_add_watch_wires.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/1j09t2vxxk4t11b/tm_guide_entity_graph_add_watch_wires.png?raw=1" alt="" /></p>
 <p>The Watch Wire list will indicate as well if a value has changed. You can also remove them there again and find the node with the find node button.</p>
-<p><img src="https://www.dropbox.com/s/lpx1duqf5lpee0n/tm_guide_entity_graph_watch_wires_overlay.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/lpx1duqf5lpee0n/tm_guide_entity_graph_watch_wires_overlay.png?raw=1" alt="" /></p>
 <p>Keep in mind that this list only works within the current graph instance and its subgraph.</p>
 <h2 id="breakpoints"><a class="header" href="#breakpoints">Breakpoints</a></h2>
 <p>Unlike watching wires which require no extra step, you cannot just add a breakpoint, and it will break immediately since such behaviour could be annoying. You can add breakpoints at any point in time via <strong>Right-Click on a node</strong> -&gt; <strong>Add Breakpoint.</strong> </p>
 <blockquote>
 <p><strong>Note:</strong> You can only add breakpoints to all nodes besides Event and Query nodes.</p>
 </blockquote>
-<p><img src="https://www.dropbox.com/s/us6lrw5ad9qpcbg/tm_guide_entity_graph_add_breakpoints.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/us6lrw5ad9qpcbg/tm_guide_entity_graph_add_breakpoints.png?raw=1" alt="" /></p>
 <p>To activate the breakpoints, you need to connect to the Simulation by pressing the Connect Button in the Debug Overlay.</p>
-<p><img src="https://www.dropbox.com/s/34jbcvkt49814kk/tm_guide_entity_graph_connect.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/34jbcvkt49814kk/tm_guide_entity_graph_connect.png?raw=1" alt="" /></p>
 <p>(<em>Alternatively, the Breakpoint Overview will inform you that you need to connect to the Simulation)</em></p>
 <p>The moment you are connected, the Simulation will react appropriately, and your breakpoints will happen.</p>
-<p><img src="https://www.dropbox.com/s/26awwgjzz93mcu4/tm_guide_entity_graph_debug_mode.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/26awwgjzz93mcu4/tm_guide_entity_graph_debug_mode.png?raw=1" alt="" /></p>
 <ol>
 <li>You can disconnect from the Simulation.</li>
 <li>You can continue till the next breakpoint hits.</li>
