--- a/gameplay_coding/visual_scripting/index.html
+++ b/gameplay_coding/visual_scripting/index.html
@@ -158,11 +158,11 @@
 <p>The <em>Entity Graph</em> implements a visual scripting language based on nodes and connections. To use
 it, right-click on an entity to add a Graph Component and then double click on the Graph Component
 to open it in the Graph Editor:</p>
-<p><img src="https://www.dropbox.com/s/ssasbp5sb0vq7gy/graph-editor.png?dl=1" alt="Graph editor." /></p>
+<p><img src="https://www.dropbox.com/s/ssasbp5sb0vq7gy/graph-editor.png?raw=1" alt="Graph editor." /></p>
 <h2 id="basic-concepts"><a class="header" href="#basic-concepts">Basic Concepts</a></h2>
 <h3 id="how-to-use-the-entity-graph"><a class="header" href="#how-to-use-the-entity-graph">How to use the Entity Graph?</a></h3>
 <p>You need to add a Graph Component to an Entity of your choice. </p>
-<p><img src="https://www.dropbox.com/s/29u0c1gsu0vjghg/tm_guide_entity_graph_add_component.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/29u0c1gsu0vjghg/tm_guide_entity_graph_add_component.png?raw=1" alt="" /></p>
 <p>After that, you have two ways of opening the Graph:</p>
 <ul>
 <li>
@@ -172,7 +172,7 @@ to open it in the Graph Editor:</p>
 <p>Click in the Property View on Edit</p>
 </li>
 </ul>
-<p><img src="https://www.dropbox.com/s/p1hkay3ouhezbmh/tm_guide_entity_graph_open.gif?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/p1hkay3ouhezbmh/tm_guide_entity_graph_open.gif?raw=1" alt="" /></p>
 <p>Now the Graph Editor Opens and you can start adding nodes via:</p>
 <ul>
 <li><strong>Right Click -&gt; Add Node</strong></li>
@@ -205,40 +205,40 @@ to open it in the Graph Editor:</p>
 <li><strong>Event Wires</strong> They regulate the execution flow.</li>
 <li><strong>Data Wires</strong> Transport the data from node to node!</li>
 </ul>
-<p><img src="https://www.dropbox.com/s/i95s1frdzhcsev1/tm_guide_entity_graph_wire_types.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/i95s1frdzhcsev1/tm_guide_entity_graph_wire_types.png?raw=1" alt="" /></p>
 <h2 id="inputs"><a class="header" href="#inputs">Inputs</a></h2>
 <p>Graphs can have inputs. They can be used to allow the user of your graph to pass data from the outside (e.g. the Editor) to the graph. This happens via the Input Nodes. In the General Graph settings you can add Inputs from the outside world.</p>
 <h3 id="adding-a-public-input"><a class="header" href="#adding-a-public-input">Adding a Public Input</a></h3>
 <ol>
 <li>You click on the Settings button which opens the Graphs Settings</li>
 </ol>
-<p><img src="https://www.dropbox.com/s/na7s582ljyxmnnf/tm_guide_entity_graph_settings.png?dl=1" alt="image" /></p>
+<p><img src="https://www.dropbox.com/s/na7s582ljyxmnnf/tm_guide_entity_graph_settings.png?raw=1" alt="image" /></p>
 <ol start="2">
 <li>
 <p>You expand the Input Accordion and press &quot;Add&quot;</p>
-<p><img src="https://www.dropbox.com/s/hv7qiqqhy4gbauw/tm_guide_entity_graph_add_input.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/hv7qiqqhy4gbauw/tm_guide_entity_graph_add_input.png?raw=1" alt="" /></p>
 </li>
 <li>
 <p>This will add a new Input to your graph! There you have a few options. </p>
-<p><img src="https://www.dropbox.com/s/s50hbn0sqhixlx3/tm_guide_entity_graph_input_node_settings.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/s50hbn0sqhixlx3/tm_guide_entity_graph_input_node_settings.png?raw=1" alt="" /></p>
 </li>
 </ol>
 <p>To make your node public just check the publicly accessible from another graph or from the Editor check the Public checkbox</p>
-<p><img src="https://www.dropbox.com/s/1m243i24lhwbosw/tm_guide_entity_graph_input_node_make_public.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/1m243i24lhwbosw/tm_guide_entity_graph_input_node_make_public.png?raw=1" alt="" /></p>
 <p>If you now select the Graph Component of your Entity you will be able to change the value:</p>
-<p><img src="https://www.dropbox.com/s/ojite1pycbs75pq/tm_guide_entity_graph_input_node_public.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/ojite1pycbs75pq/tm_guide_entity_graph_input_node_public.png?raw=1" alt="" /></p>
 <p>This can be a nice way to customize behaviour of your graph and entity!</p>
 <ol start="4">
 <li>
 <p>Add an Input node to your graph. There you have access to the data.</p>
-<p><img src="https://www.dropbox.com/s/l20w7d0utoet9ti/tm_guide_entity_graph_input_node.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/l20w7d0utoet9ti/tm_guide_entity_graph_input_node.png?raw=1" alt="" /></p>
 <p>The Input Node also allows you to access the settings. Hover over the name of the Input and a Settings option becomes available. </p>
-<p><img src="https://www.dropbox.com/s/wrg5hk7lbx0l1rs/tm_guide_entity_graph_input_node_on_settings.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/wrg5hk7lbx0l1rs/tm_guide_entity_graph_input_node_on_settings.png?raw=1" alt="" /></p>
 </li>
 </ol>
 <h3 id="variables"><a class="header" href="#variables">Variables</a></h3>
 <p>You can store data within your Graph! The Set / Get Variable nodes are the way to go. They give you access to this function. You can also access variables from distance Entities by using the Set / Get Remote Variable nodes.</p>
-<p><img src="https://www.dropbox.com/s/dgddk1xmw16dlp1/tm_guide_entity_graph_create_remote_variable.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/dgddk1xmw16dlp1/tm_guide_entity_graph_create_remote_variable.png?raw=1" alt="" /></p>
 <h3 id="branches-and-loops"><a class="header" href="#branches-and-loops">Branches and loops</a></h3>
 <p>The Language comes with built-in support for branches, the If node. The Language supports multiple bool operators to compare values.</p>
 <p>Besides, you have two nodes for loops:</p>
@@ -247,7 +247,7 @@ to open it in the Graph Editor:</p>
 <li>The For node</li>
 </ul>
 <p><em>The Grid node for example:</em></p>
-<p><img src="https://www.dropbox.com/s/9fawc756lyf0k3h/tm_guide_entity_graph_loop.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/9fawc756lyf0k3h/tm_guide_entity_graph_loop.png?raw=1" alt="" /></p>
 <h3 id="subgraphs"><a class="header" href="#subgraphs">Subgraphs</a></h3>
 <p>You can organize your code into smaller reusable units and combine nodes as a subgraph! Using subgraphs makes your Graph more user-friendly, and it will look less like spaghetti. You can store your subgraph as a <code>.entity_graph</code> asset in your asset browser and allow it to be reused across your project! Which enables you to have maximal flexibility! </p>
 <h2 id="what-is-next"><a class="header" href="#what-is-next">What is next?</a></h2>
