--- a/gameplay_coding/visual_scripting/subgraphs.html
+++ b/gameplay_coding/visual_scripting/subgraphs.html
@@ -158,10 +158,10 @@
 <p>Subgraphs are a way to organize your graph better and create smaller units. They make them easier to maintain and easy to follow. In its essence a subgraph is a graph within a graph. They are interfaced via a subgraph node. They can produce Input and Output, such as a normal node could. They can also call and react to normal Events!</p>
 <h2 id="create-a-subgraph"><a class="header" href="#create-a-subgraph">Create a subgraph</a></h2>
 <p>You create a new subgraph by simply selecting all nodes that shall be part of the subgraph. After that, click on them with the right mouse and select Create Subgraph from the context menu**.** The subgraph will replace the selected nodes. You can change its label in the property view. By simply double click you open the subgraph.</p>
-<p><img src="https://www.dropbox.com/s/k688sg41w5507mn/tm_guide_entity_graph_create_subgraph.gif?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/k688sg41w5507mn/tm_guide_entity_graph_create_subgraph.gif?raw=1" alt="" /></p>
 <h2 id="subgraph-inputs"><a class="header" href="#subgraph-inputs">Subgraph Inputs</a></h2>
 <p>A subgraph can have inputs and outputs. You can add them to them the same way as for a normal Graph. But you can also just connect the needed wires with the subgraph node, as the following image shows:</p>
-<p><img src="https://www.dropbox.com/s/18b2z2f1ed80ex6/tm_guide_entity_graph_create_subgraph_input_output.gif?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/18b2z2f1ed80ex6/tm_guide_entity_graph_create_subgraph_input_output.gif?raw=1" alt="" /></p>
 <h2 id="subgraph-prototypes"><a class="header" href="#subgraph-prototypes">Subgraph Prototypes</a></h2>
 <p>The Machinery's  <strong>Prototype</strong> system allows you to create, configure, and store an Entity/Creation Graph complete with all its subgraphs, input/output nodes as a reusable Entity / Creation Graph Asset. </p>
 <blockquote>
@@ -173,7 +173,7 @@
 </blockquote>
 <h3 id="create-a-subgraph-prototype"><a class="header" href="#create-a-subgraph-prototype">Create a subgraph Prototype</a></h3>
 <p>You can turn a subgraph into a prototype by simply using the context menu of the subgraph node and selecting Create Subgraph prototype. This will create a Subgraph Prototype Asset (<code>.entity_graph</code>) in your Asset Browser. When you open it you are opening the instanced version. Any change to this version will not be shared across all other versions! Only changes made to the prototype will propagate to all changes! To open a prototype you can use the &quot;Open Prototype&quot; Button. </p>
-<p><img src="https://www.dropbox.com/s/kstww1jbo3dpvwj/tm_guide_entity_graph_create_subgraph_prototype.gif?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/kstww1jbo3dpvwj/tm_guide_entity_graph_create_subgraph_prototype.gif?raw=1" alt="" /></p>
 
                     </main>
 
