--- a/getting_started/logging_in.html
+++ b/getting_started/logging_in.html
@@ -156,7 +156,7 @@
                     <main>
                         <h2 id="sign-in"><a class="header" href="#sign-in">Sign in</a></h2>
 <p>When you first run <code>the-machinery.exe</code>, you will encounter a login screen:</p>
-<p><img src="https://www.dropbox.com/s/07rcwx7b1pggnxe/sign-in.png?dl=1" alt="Login screen." /></p>
+<p><img src="https://www.dropbox.com/s/07rcwx7b1pggnxe/sign-in.png?raw=1" alt="Login screen." /></p>
 <p>To use the editor, you must log in with an Our Machinery account. If you haven't done so already, press the <em>Sign Up</em> button to create an account, or go directly to <a href="https://ourmachinery.com/sign-up.html">https://ourmachinery.com/sign-up.html</a>.</p>
 <p>In addition, you also need to agree to our <a href="https://www.ourmachinery.com/eula.html">EULA</a>.</p>
 
