--- a/getting_started/migration_from_unity.html
+++ b/getting_started/migration_from_unity.html
@@ -195,9 +195,9 @@
 </tbody></table>
 <h2 id="ui-differences"><a class="header" href="#ui-differences">UI Differences</a></h2>
 <p><strong>Unity</strong></p>
-<p><img src="https://www.dropbox.com/s/0a47vz1walkm79r/tm_guide_unity_editor.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/0a47vz1walkm79r/tm_guide_unity_editor.png?raw=1" alt="" /></p>
 <p><strong>The Machinery</strong></p>
-<p><img src="https://www.dropbox.com/s/67sdkq7sxnkbkou/tm_editor.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/67sdkq7sxnkbkou/tm_editor.png?raw=1" alt="" /></p>
 <ol>
 <li>The <strong>Main Menu</strong>: It allows you to navigate through the Engine, such as opening new tabs or import assets</li>
 <li>The <strong>Entity Tree</strong> shows a tree view of the entity you are editing. It shows the entity's components and child entities. You start editing an entity by double-clicking it in the asset browser. </li>
