--- a/getting_started/project_setup.html
+++ b/getting_started/project_setup.html
@@ -161,10 +161,10 @@
 </blockquote>
 <h2 id="the-directory-project"><a class="header" href="#the-directory-project">The Directory Project</a></h2>
 <p>A directory project saves all your assets, etc., in a specified project folder. The assets that make up the project are saved as combination of JSON files and binary buffers. This file format is better suited for source control.</p>
-<p><img src="https://www.dropbox.com/s/7xqwlu6yi6y35nz/tm_guide_directory_project.png?dl=1" alt="view of a directory project in the Windows explorer" /></p>
+<p><img src="https://www.dropbox.com/s/7xqwlu6yi6y35nz/tm_guide_directory_project.png?raw=1" alt="view of a directory project in the Windows explorer" /></p>
 <h2 id="the-asset-database-project"><a class="header" href="#the-asset-database-project">The Asset database Project</a></h2>
 <p>In contract to the Directory project, the database project results in one file rather than multiple files. It has the file ending <code>.the_machinery_db</code>. This database will contain all your assets. It loads faster. It is the file format used by the <em>Runner</em>, the stand-alone application that is used to run games made within The Machinery.</p>
-<p><img src="https://www.dropbox.com/s/kjmrx89my0olh6z/tm_guide_db_project.png?dl=1" alt="database project in the file explorer" /></p>
+<p><img src="https://www.dropbox.com/s/kjmrx89my0olh6z/tm_guide_db_project.png?raw=1" alt="database project in the file explorer" /></p>
 <h2 id="project-management"><a class="header" href="#project-management">Project Management</a></h2>
 <p><strong>Can I directly add Assets to my project from the File Explorer of my OS?</strong></p>
 <p><strong>No</strong>, the editor will not import assets directly added to the project folder via your OS File Explorer. However you can modify The Machinery files (in a directory project) during runtime or before. If you do this the Engine will warn you.</p>
@@ -173,10 +173,10 @@
 </blockquote>
 <p>More information on this topic <a href="https://github.com/OurMachinery/themachinery-public/issues/435">here</a>.</p>
 <p>You handle the main project management steps through the <strong>File Menu.</strong> Such as Create and Save. By default, (1) The Machinery will save your project as a directory project. However you can save your current project as an Asset Database (2).</p>
-<p><img src="https://www.dropbox.com/s/qosmerpjea1agss/tm_guide_saving_project.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/qosmerpjea1agss/tm_guide_saving_project.png?raw=1" alt="" /></p>
 <h2 id="possible-folder-structure-for-a-project"><a class="header" href="#possible-folder-structure-for-a-project">Possible folder structure for a project</a></h2>
 <p>The following project shows a possible folder structure of a game project. <strong>This is not a recommendation just a suggestion</strong>. At the end it depends on your needs and your workflows how your projects should be structured.</p>
-<p><img src="https://www.dropbox.com/s/sbdsy1k5wjay89c/tm_guide_possible_folder_structure.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/sbdsy1k5wjay89c/tm_guide_possible_folder_structure.png?raw=1" alt="" /></p>
 <ol>
 <li><code>game_project</code> contains a The Machinery Directory Project</li>
 <li><code>plugins</code> contains the dll of  your plugins (should not be checked in into source control)</li>
@@ -184,7 +184,7 @@
 <li><code>src</code> contains the source code of your plugins. They can be in multiple sub folder depending on your liking and need.</li>
 </ol>
 <p><strong>Example <code>src</code> folder</strong></p>
-<p><img src="https://www.dropbox.com/s/l1429g7p5xx8kj2/tm_guide_possible_subfolder.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/l1429g7p5xx8kj2/tm_guide_possible_subfolder.png?raw=1" alt="" /></p>
 <p>In here we have one single <code>premake</code> file and a single <code>libs.json</code> as well as the <code>libs</code> folder. This allows you to run <code>tmbuild</code> just in this folder and all plugins or the ones you want to build can be built at once. Besides it will generate one solution for Visual Studio. In this example all plugins will copy their <code>.dll/so</code> files into the <code>../plugins</code> folder. </p>
 <p>A possible <code>.gitignore</code></p>
 <pre><code>plugins/*
