--- a/graphics/default_render_pipeline.html
+++ b/graphics/default_render_pipeline.html
@@ -155,7 +155,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id=""><a class="header" href="#"></a></h1>
-<p><img src="https://www.dropbox.com/s/61buexu1hw0pvms/tm_default_render_pipeline.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/61buexu1hw0pvms/tm_default_render_pipeline.png?raw=1" alt="" /></p>
 
                     </main>
 
