--- a/graphics/post_processing/aa.html
+++ b/graphics/post_processing/aa.html
@@ -156,8 +156,8 @@
                     <main>
                         <h1 id="adjusting-anti-aliasing"><a class="header" href="#adjusting-anti-aliasing">Adjusting Anti-Aliasing</a></h1>
 <p>Anti-Aliasing (AA) refers to various techniques for smoothing aliased, or jagged edges when dealing with a finite number of samples, like a monitor. The Machinery supports Temporal Anti-Aliasing (TAA) as a post-processing effect. Multisample Anti-Aliasing (MSAA) support is planned on a per image level, but is currently not available to all render backends.</p>
-<p><img src="https://www.dropbox.com/s/98wyr2w26dbe8r6/tm_tut_aa.png?dl=1" alt="No TAA (left) vs TAA (right)" /></p>
-<p><img src="https://www.dropbox.com/s/8196q7vpn5bujx8/tm_tut_aa_settings.png?dl=1" alt="TAA Settings" /></p>
+<p><img src="https://www.dropbox.com/s/98wyr2w26dbe8r6/tm_tut_aa.png?raw=1" alt="No TAA (left) vs TAA (right)" /></p>
+<p><img src="https://www.dropbox.com/s/8196q7vpn5bujx8/tm_tut_aa_settings.png?raw=1" alt="TAA Settings" /></p>
 
                     </main>
 
