--- a/graphics/post_processing/bloom.html
+++ b/graphics/post_processing/bloom.html
@@ -157,7 +157,7 @@
                         <h1 id="bloom"><a class="header" href="#bloom">Bloom</a></h1>
 <p>Bloom (or glow) is an effect for real world lenses that produces fringes of light that extend from the borders of bright areas in the scene. It is produced by diffraction patterns of light sources through a lens aperture. This particularly affects lights sources and emissive materials.
 In The Machinery this is implemented as multiple Gaussian blurs that only affect the bright areas on the scene.</p>
-<p><img src="https://www.dropbox.com/s/zqx30bzzt86rqyo/tm_tut_bloom_on_off.png?dl=1" alt="Bloom On (left) and Off (right)" /></p>
+<p><img src="https://www.dropbox.com/s/zqx30bzzt86rqyo/tm_tut_bloom_on_off.png?raw=1" alt="Bloom On (left) and Off (right)" /></p>
 <table><thead><tr><th><strong>Property</strong></th><th><strong>Description</strong></th></tr></thead><tbody>
 <tr><td>Threshold</td><td>The luminance threshold for bloom to start considering a sample. This is roughly measured in Lux.</td></tr>
 <tr><td>Falloff</td><td>Defines the size of the bloom fringes. More falloff means larger fringes.</td></tr>
