--- a/graphics/post_processing/color_grading.html
+++ b/graphics/post_processing/color_grading.html
@@ -156,10 +156,10 @@
                     <main>
                         <h1 id="color-grading"><a class="header" href="#color-grading">Color Grading</a></h1>
 <p>The Machinery supports industry standard methods for color grading for HDR colors. Currently, there is no support for custom tone mappers:</p>
-<p><img src="https://www.dropbox.com/s/f51xt0yd696w3jv/tm_tut_color_grading_lgg_sop.png?dl=1" alt="Controls" /></p>
+<p><img src="https://www.dropbox.com/s/f51xt0yd696w3jv/tm_tut_color_grading_lgg_sop.png?raw=1" alt="Controls" /></p>
 <p>The <a href="https://ourmachinery.com/apidoc//plugins/default_render_pipe/post_processing/color_grading_component.h.html#color_grading_component.h">Color Grading</a> component allows you to use either Lift/Gamma/Gain controls or ASC-CDL controls. Regardless of the method used, the shader will apply a single ASC-CDL transform per channel. The resulting transform is visualized using the graph. Color grading is applied just before the tone mapper in ACEScg space.</p>
-<p><img src="https://www.dropbox.com/s/v8xm2u9ln0dy065/tm_tut_color_grading_flow.png?dl=1" alt="" /></p>
-<p><img src="https://www.dropbox.com/s/9080y9197sr1p5v/tm_tut_color_grading_tools.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/v8xm2u9ln0dy065/tm_tut_color_grading_flow.png?raw=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/9080y9197sr1p5v/tm_tut_color_grading_tools.png?raw=1" alt="" /></p>
 <p>The Color Scopes Tab can be used to visualize the color spread in your scene. This might aid in color grading. </p>
 
                     </main>
