--- a/qa_pipeline/statistics.html
+++ b/qa_pipeline/statistics.html
@@ -161,7 +161,7 @@
 <p><img src="https://paper-attachments.dropbox.com/s_5086E710AFB88B222C81207791AF7092731DB9D2900AFABEA044A0AC0B80DFFB_1625604230068_image.png" alt="" /></p>
 <h2 id="statistics-overlay"><a class="header" href="#statistics-overlay">Statistics Overlay</a></h2>
 <p>During the simulation in the simulate tab you have the ability to open different statistic overlays.</p>
-<p><img src="https://www.dropbox.com/s/cmk3u9lt4d8l3n0/tm_guide_statistics_in_simulate.png?dl=1" alt="https://www.dropbox.com/s/cmk3u9lt4d8l3n0/tm_guide_statistics_in_simulate.png?dl=1" /></p>
+<p><img src="https://www.dropbox.com/s/cmk3u9lt4d8l3n0/tm_guide_statistics_in_simulate.png?raw=1" alt="https://www.dropbox.com/s/cmk3u9lt4d8l3n0/tm_guide_statistics_in_simulate.png?dl=1" /></p>
 
                     </main>
 
