--- a/the_editor/customizations.html
+++ b/the_editor/customizations.html
@@ -165,7 +165,7 @@
 </ul>
 <h2 id="change-theme"><a class="header" href="#change-theme">Change Theme</a></h2>
 <p>Sometimes we do not like the default theme or, based on reasons such as color blindness, and we cannot use the default theme. In the Machinery, you can change the default theme via <strong>Window -&gt; Theme</strong>. You will find a list of themes the user can select and use.</p>
-<p><img src="https://www.dropbox.com/s/yt180qozhyrw2zc/tm_guide_theme_picker.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/yt180qozhyrw2zc/tm_guide_theme_picker.png?raw=1" alt="" /></p>
 <p>The Engine comes by default with some base themes you can build your themes on top of:</p>
 <table><thead><tr><th>Theme</th></tr></thead><tbody>
 <tr><td>Dark</td></tr>
@@ -175,16 +175,16 @@
 </tbody></table>
 <h2 id="custom-theme"><a class="header" href="#custom-theme">Custom Theme</a></h2>
 <p>If you like to customize the default themes or create a new theme, click on the &quot;<strong>New Theme&quot;</strong> menu in the same menu as the theme selection. After clicking this, the current Theme will be used as your base, and the Theme Editor Tab opens.</p>
-<p><img src="https://www.dropbox.com/s/imcy0y9wgxh252k/tm_guide_theme_create.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/imcy0y9wgxh252k/tm_guide_theme_create.png?raw=1" alt="" /></p>
 <p>If you do not like the base, you can choose a different theme as a base.</p>
-<p><img src="https://www.dropbox.com/s/o7evmfhx8xn3gfn/tm_guide_theme_change_base.png?dl=1" alt="change base of theme" /></p>
+<p><img src="https://www.dropbox.com/s/o7evmfhx8xn3gfn/tm_guide_theme_change_base.png?raw=1" alt="change base of theme" /></p>
 <p>All changes are applied and saved directly. All changes will be immediately visible since your new Theme is selected as your current Theme.</p>
-<p><img src="https://www.dropbox.com/s/z6sseczp8ccyhui/tm_guide_theme_changes_visible.png?dl=1" alt="changes are directly visible" /></p>
+<p><img src="https://www.dropbox.com/s/z6sseczp8ccyhui/tm_guide_theme_changes_visible.png?raw=1" alt="changes are directly visible" /></p>
 <h2 id="export--import-a-theme"><a class="header" href="#export--import-a-theme">Export / Import a theme</a></h2>
 <p>You can export a custom theme from the <strong>Window -&gt; Theme</strong> and later import it there as well. The Theme will be saved as a <code>.tm_theme</code> file. These files are simple <code>json</code> like files.</p>
 <h2 id="change-the-scale-of-the-ui"><a class="header" href="#change-the-scale-of-the-ui">Change the Scale of the UI</a></h2>
 <p>In the <strong>Window</strong> menu, you have a menu point <strong>Zoom</strong>. </p>
-<p><img src="https://www.dropbox.com/s/mvdzunm81gj4qj4/tm_guide_window_zoom.png?dl=1" alt="zom option" /></p>
+<p><img src="https://www.dropbox.com/s/mvdzunm81gj4qj4/tm_guide_window_zoom.png?raw=1" alt="zom option" /></p>
 <p>This allows you to zoom in or out. You can also use the key bindings:</p>
 <table><thead><tr><th>Meaning</th><th>Keys</th></tr></thead><tbody>
 <tr><td>Zoom In</td><td>CTRL + Equal, CTRL + Num + Plus</td></tr>
@@ -192,28 +192,28 @@
 </tbody></table>
 <h2 id="custom-layout"><a class="header" href="#custom-layout">Custom Layout</a></h2>
 <p>In case you do not like your current layout, you can always restore the default layout by using the <strong>Window -&gt; Restore Default Layout</strong> menu point. </p>
-<p><img src="https://www.dropbox.com/s/coy73d8esv1jdew/tm_guide_window_restore_layout.png?dl=1" alt="restore default layout" /></p>
+<p><img src="https://www.dropbox.com/s/coy73d8esv1jdew/tm_guide_window_restore_layout.png?raw=1" alt="restore default layout" /></p>
 <p>If you want to store your current layout, it would be very useful for the later time you can save your current window layout.</p>
-<p><img src="https://www.dropbox.com/s/3vfmrnstcrf35gy/tm_guide_window_save_layout.png?dl=1" alt="save current layout" /></p>
+<p><img src="https://www.dropbox.com/s/3vfmrnstcrf35gy/tm_guide_window_save_layout.png?raw=1" alt="save current layout" /></p>
 <p>You can create a new window or workspace with a layout in case you need it.</p>
-<p><img src="https://www.dropbox.com/s/dxy29xlb31xsbv9/tm_guide_create_window_with_layout.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/dxy29xlb31xsbv9/tm_guide_create_window_with_layout.png?raw=1" alt="" /></p>
 <blockquote>
 <p><strong>Note:</strong> The Engine should restore the last used layout when it shutdown.</p>
 </blockquote>
 <p>If you need to change some details of your Window layout you can do this via the Edit layout menu. </p>
-<p><img src="https://www.dropbox.com/s/bbc8ke0bqgp7vkh/tm_guide_window_edit.png?dl=1" alt="edit layout" /></p>
+<p><img src="https://www.dropbox.com/s/bbc8ke0bqgp7vkh/tm_guide_window_edit.png?raw=1" alt="edit layout" /></p>
 <p>This will open the settings of the current Layout:</p>
-<p><img src="https://www.dropbox.com/s/1qt0q6ho4k3jn4d/tm_guide_window_edit_layout.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/1qt0q6ho4k3jn4d/tm_guide_window_edit_layout.png?raw=1" alt="" /></p>
 <h2 id="world-grid"><a class="header" href="#world-grid">World Grid</a></h2>
 <p>In case you need to adjust the World Grid, you can do this at two places:</p>
 <ol>
 <li>Via the Application Settings</li>
 </ol>
-<p><img src="https://www.dropbox.com/s/61rdistx6vuxaow/tm_guide_change_grid_settings.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/61rdistx6vuxaow/tm_guide_change_grid_settings.png?raw=1" alt="" /></p>
 <ol start="2">
 <li>Via any Scene or Preview Tab Application Menu entry.</li>
 </ol>
-<p><img src="https://www.dropbox.com/s/doenzd3d3gniq0u/tm_guide_change_grid_scene_tab.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/doenzd3d3gniq0u/tm_guide_change_grid_scene_tab.png?raw=1" alt="" /></p>
 <p>Changes made there will only be applied to the specific tab.</p>
 
                     </main>
