--- a/tutorials/creation_graph/from_code.html
+++ b/tutorials/creation_graph/from_code.html
@@ -163,7 +163,7 @@
 <li><a href="#remarks">Remarks</a></li>
 <li><a href="#full-code">Full Code</a></li>
 </ul>
-<p><img src="https://www.dropbox.com/s/k4y8wlwx7y8vll3/tm_tut_creation_graphs_from_code.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/k4y8wlwx7y8vll3/tm_tut_creation_graphs_from_code.png?raw=1" alt="" /></p>
 <h2 id="using-the-creation-graph-api"><a class="header" href="#using-the-creation-graph-api">Using the Creation Graph API</a></h2>
 <p>The component itself is very simple, it only has a single property which is our creation graph asset:</p>
 <pre><code class="language-c">static const tm_the_truth_property_definition_t properties[] = {
