--- a/tutorials/creation_graph/introduction_walkthrough/custom_import_settings.html
+++ b/tutorials/creation_graph/introduction_walkthrough/custom_import_settings.html
@@ -187,7 +187,7 @@
 <p>Now we make use of the previously created <code>dcc-image-compress</code>. This creation graph enables image compression and exposed the compression settings as a public input.</p>
 <p>{image}</p>
 <p>Now can can change in the Import Settings the for the DCC Asset Creation Graphs: Images</p>
-<p><img src="https://www.dropbox.com/s/dtkra0xs17yxvlq/tm_tut_cg_walkthough_import_settings.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/dtkra0xs17yxvlq/tm_tut_cg_walkthough_import_settings.png?raw=1" alt="" /></p>
 <p>We change this to our <code>dcc-image-compress</code> creation graph.</p>
 <h2 id="import-asset"><a class="header" href="#import-asset">Import Asset</a></h2>
 <p>Now when we import the dcc asset we can see that the textures are auto compressed when we extract all the textures from the dcc asset.</p>
@@ -205,7 +205,7 @@
 <li>We also expose the compression settings as new input and also set it via the property panel to public</li>
 </ol>
 <p>The graph should look like this:</p>
-<p><img src="https://www.dropbox.com/s/xnpj45zjxkw5kez/tm_tut_cgw_image_import_cg.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/xnpj45zjxkw5kez/tm_tut_cgw_image_import_cg.png?raw=1" alt="" /></p>
 <h3 id="apply-the-correct-settings-to-the-import-settings"><a class="header" href="#apply-the-correct-settings-to-the-import-settings">Apply the correct settings to the Import Settings</a></h3>
 <p>What is left to do is change the creation graph for Import Images to our new <code>import-image-compress</code> creation graph in the Import Settings.</p>
 
