--- a/tutorials/physics/contacts.html
+++ b/tutorials/physics/contacts.html
@@ -155,15 +155,15 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="contacts-scene-breakdown"><a class="header" href="#contacts-scene-breakdown">Contacts scene breakdown</a></h1>
-<p><img src="https://www.dropbox.com/s/s2ocyt0bcywxjkl/image-20220318094339252.png?dl=1" alt="image-20220318094339252" /></p>
+<p><img src="https://www.dropbox.com/s/s2ocyt0bcywxjkl/image-20220318094339252.png?raw=1" alt="image-20220318094339252" /></p>
 <h2 id="plane"><a class="header" href="#plane">Plane</a></h2>
 <p>The Plane Entity is just a simple Entity with a Shape attached to it.</p>
 <h2 id="spawn-pile"><a class="header" href="#spawn-pile">Spawn Pile</a></h2>
 <p>The Spawn Pile doesn't have any Physics component attached to it, but its Entity Graph will spawn a new Box every Three seconds and Push it down towards the Ground.</p>
-<p><img src="https://www.dropbox.com/s/pn0mnz7l1vcac8u/image-20220317093117838.png?dl=1" alt="image-20220317093117838" /></p>
+<p><img src="https://www.dropbox.com/s/pn0mnz7l1vcac8u/image-20220317093117838.png?raw=1" alt="image-20220317093117838" /></p>
 <h2 id="ball-thrower-prototype-location-special-objectsball-thrower"><a class="header" href="#ball-thrower-prototype-location-special-objectsball-thrower">Ball thrower (Prototype location: Special Objects/Ball Thrower)</a></h2>
 <p>The Ball Thrower doesn't have any Physics component either, but it will spawn a new ball in the viewing direction if the spacebar is pressed. The Logic is pretty similar to the one of the Spawn Pile: Spawn a new entity and use the Physx Push Node to push it in a specific direction, in this case the camera viewing direction.</p>
-<p><img src="https://www.dropbox.com/s/yxmcg9znvubo4jp/image-20220317093549002.png?dl=1" alt="image-20220317093549002" /></p>
+<p><img src="https://www.dropbox.com/s/yxmcg9znvubo4jp/image-20220317093549002.png?raw=1" alt="image-20220317093549002" /></p>
 <p>That's it for the Contacts scene, it's a pretty simple one.</p>
 <p>You will notice that the Boxes only collide with the blue spheres and the Ground plane: as an exercise try to make it so that the boxes also collides with each other.</p>
 
