--- a/tutorials/physics/kinematic.html
+++ b/tutorials/physics/kinematic.html
@@ -155,7 +155,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="kinematic-scene-breakdown"><a class="header" href="#kinematic-scene-breakdown">Kinematic Scene breakdown</a></h1>
-<p><img src="https://www.dropbox.com/s/jvy8da7ptkl5uk0/image-20220317102629794.png?dl=1" alt="image-20220317102629794" /></p>
+<p><img src="https://www.dropbox.com/s/jvy8da7ptkl5uk0/image-20220317102629794.png?raw=1" alt="image-20220317102629794" /></p>
 <h2 id="plane"><a class="header" href="#plane">Plane</a></h2>
 <p>Just static geometry like we saw in previous scenes.</p>
 <h2 id="walls"><a class="header" href="#walls">Walls</a></h2>
@@ -164,12 +164,12 @@
 <p>The sweeper is a simple rigid body with a rectangular shape that will perpetually rotate on it's own Y axis.</p>
 <p>The Rigid body component has the &quot;Kinematic&quot; flag set so that Physx knows that the position of the entity will be driven by its transform component.</p>
 <p>The Velocity component is used to apply (in this case) a constant angular velocity to the entity to make it rotate on its own axis.</p>
-<p><img src="https://www.dropbox.com/s/timq3uy7mfltzfp/image-20220318094033356.png?dl=1" alt="image-20220318094033356" /></p>
+<p><img src="https://www.dropbox.com/s/timq3uy7mfltzfp/image-20220318094033356.png?raw=1" alt="image-20220318094033356" /></p>
 <h2 id="spawners"><a class="header" href="#spawners">Spawners</a></h2>
 <p>There are four different spawners in the scene, placed at the four corners of the plane, and each one of them will spawn a physic object once every second.</p>
 <p>Notice that the spawned entities won't have any force applied to them, so they will just fall on the ground. (Until they get swept by the Sweeper, I mean)</p>
 <p>You can find the objects that will be spawned for each of the spawners under the Shapes folder. </p>
-<p><img src="https://www.dropbox.com/s/elydub9tniba8a7/image-20220317102210569.png?dl=1" alt="image-20220317102210569" /></p>
+<p><img src="https://www.dropbox.com/s/elydub9tniba8a7/image-20220317102210569.png?raw=1" alt="image-20220317102210569" /></p>
 <h2 id="ball-thrower-prototype-location-special-objectsball-thrower"><a class="header" href="#ball-thrower-prototype-location-special-objectsball-thrower">Ball Thrower (Prototype location: Special Objects/Ball Thrower)</a></h2>
 <p>The same ball thrower that we saw in the Contacts scene: press Space to throw a ball in the scene.</p>
 
