--- a/tutorials/physics/stack.html
+++ b/tutorials/physics/stack.html
@@ -155,7 +155,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="stack-scene-breakdown"><a class="header" href="#stack-scene-breakdown">Stack Scene Breakdown</a></h1>
-<p><img src="https://www.dropbox.com/s/hwqnbbewblkiifb/image-20220317110041697.png?dl=1" alt="image-20220317110041697" /></p>
+<p><img src="https://www.dropbox.com/s/hwqnbbewblkiifb/image-20220317110041697.png?raw=1" alt="image-20220317110041697" /></p>
 <h2 id="plane"><a class="header" href="#plane">Plane</a></h2>
 <p>Simple static geometry.</p>
 <h2 id="stack"><a class="header" href="#stack">Stack</a></h2>
@@ -164,7 +164,7 @@
 <p>Class Ball thrower that we already saw.</p>
 <h2 id="sniper"><a class="header" href="#sniper">Sniper</a></h2>
 <p>The sniper will cast a ray into the scene using the <code>Physx Raycast</code> node if the Left mouse button is pressed and, if something is hit, it will push the hit entity in the camera direction.</p>
-<p><img src="https://www.dropbox.com/s/m02p85cft958l4q/image-20220317110122631.png?dl=1" alt="image-20220317110122631" /></p>
+<p><img src="https://www.dropbox.com/s/m02p85cft958l4q/image-20220317110122631.png?raw=1" alt="image-20220317110122631" /></p>
 
                     </main>
 
