--- a/tutorials/ui/custom_layouts.html
+++ b/tutorials/ui/custom_layouts.html
@@ -189,7 +189,7 @@
 <li>We can split the tabwell horizontally, creating top and bottom child tabwells.</li>
 <li>We can split the tabwell vertically, creating left and right child tabwells.</li>
 <li>We can define (up to 3) tabs that should be in this tabwell.
-<img src="https://www.dropbox.com/s/ggiq4uv6htgwnpj/tm_tut_default_layout.png?dl=1" alt="" /></li>
+<img src="https://www.dropbox.com/s/ggiq4uv6htgwnpj/tm_tut_default_layout.png?raw=1" alt="" /></li>
 </ul>
 <pre><code class="language-c">tm_tab_layout_t layout = {
     .split = TM_TAB_LAYOUT_SPLIT_TYPE__HORIZONTAL,
