--- a/tutorials/ui/toolbars-overlays.html
+++ b/tutorials/ui/toolbars-overlays.html
@@ -167,7 +167,7 @@
 <h2 id="implement-a-toolbar-in-a-tab"><a class="header" href="#implement-a-toolbar-in-a-tab">Implement a Toolbar in a Tab</a></h2>
 <p>To begin with, we need to create a new tab plugin. We go on <strong>File -&gt; New Plugin -&gt; Tab.</strong> </p>
 <p>A file dialog pops up, and we can decide where to store our plugin.</p>
-<p><img src="https://www.dropbox.com/s/jhrqv8t8bbhr20u/tm_tut_new_tab.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/jhrqv8t8bbhr20u/tm_tut_new_tab.png?raw=1" alt="" /></p>
 <p>We open the <code>custom_tab.c</code> (or however we called it) file with our favorite editor.</p>
 <p>We search for the line in which we define the tab itself:</p>
 <pre><code class="language-c">static tm_tab_vt *custom_tab_vt = &amp;(tm_tab_vt){
