--- a/editing_workflows/prototype_workflow/how_to_create_prototypes.html
+++ b/editing_workflows/prototype_workflow/how_to_create_prototypes.html
@@ -169,15 +169,15 @@
 <p>This will add a new asset to your project. Any changes made to the asset will be applied to all instances of the prototype.</p>
 <h2 id="entity-prototype-drag-and-drop"><a class="header" href="#entity-prototype-drag-and-drop">Entity Prototype: Drag and Drop</a></h2>
 <p>You can create a Prototype from an Entity by simply dragging and dropping it from the Entity Tree into the Asset Browser.</p>
-<p><img src="https://www.dropbox.com/s/erc3f4wqjoy5djt/tm_tut_prototype_create_drag.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/erc3f4wqjoy5djt/tm_tut_prototype_create_drag.png?raw=1" alt="" /></p>
 <p>This creates a new asset with the file extension <code>.entity</code>. It also replaces the entity in the Entity Tree with an instance of the newly created prototype.</p>
 <h2 id="entity-prototype-create-prototype-from-entity"><a class="header" href="#entity-prototype-create-prototype-from-entity">Entity Prototype: Create Prototype from Entity</a></h2>
 <p>You can also create a prototype by using the context menu in the Entity Tree View on the Entity you want to turn into a Prototype:</p>
-<p><img src="https://www.dropbox.com/s/ys17wsljt82s2me/tm_tut_prototype_create_context.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/ys17wsljt82s2me/tm_tut_prototype_create_context.png?raw=1" alt="" /></p>
 <h2 id="graph-prototypes-from-subgraphs"><a class="header" href="#graph-prototypes-from-subgraphs">Graph Prototypes from Subgraphs</a></h2>
 <p>You can turn a Subgraph into a prototype by choosing <strong>Create Subgraph Prototype</strong> in the Subgraph node's context menu. This creates a Subgraph Prototype Asset (<code>.entity_graph</code>) in your Asset Browser. It will also change the Subgraph to become an instance of the newly created prototype. If you open the Subgraph node at this point all the nodes will be grayed out. This shows that they are inherited from the prototype. Any changes you make there will be local to that instance.</p>
 <p>To make a change that propagates to all instances of the prototype, open the prototype in the asset browser, or by using the <strong>Open Prototype</strong> button in the Properties view of the Subgraph node.</p>
-<p><img src="https://www.dropbox.com/s/kstww1jbo3dpvwj/tm_guide_entity_graph_create_subgraph_prototype.gif?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/kstww1jbo3dpvwj/tm_guide_entity_graph_create_subgraph_prototype.gif?raw=1" alt="" /></p>
 
                     </main>
 
