--- a/editing_workflows/visual-scripting.html
+++ b/editing_workflows/visual-scripting.html
@@ -158,7 +158,7 @@
 <p>The <em>Entity Graph</em> implements a visual scripting language based on nodes and connections. To use
 it, right-click on an entity to add a Graph Component and then double click on the Graph Component
 to open it in the Graph Editor:</p>
-<p><img src="https://www.dropbox.com/s/ssasbp5sb0vq7gy/graph-editor.png?dl=1" alt="Graph editor." /></p>
+<p><img src="https://www.dropbox.com/s/ssasbp5sb0vq7gy/graph-editor.png?raw=1" alt="Graph editor." /></p>
 <p>The visual scripting language uses <em>Events</em> to tick the execution of nodes. For example, the
 <em>Tick Event</em> node will trigger its out connector whenever the application ticks its frame. Connect
 its output event connector to another node to run that node during the application's update.</p>
