--- a/gameplay_coding/ecs/index.html
+++ b/gameplay_coding/ecs/index.html
@@ -186,7 +186,7 @@ allows us to compose complex objects from simpler components in a flexible and p
 </ul>
 <h2 id="what-is-an-entity"><a class="header" href="#what-is-an-entity">What is an Entity?</a></h2>
 <p>An entity is the fundamental part of the Entity Component System. An entity is a handle to your data. The entity itself does not store any data or behavior.  The data is stored in components, which are associated with the Entity. The behavior is defined in Systems and Engines which process those components. Therefore an entity acts as an identifier or key to the data stored in components.</p>
-<p><img src="https://www.dropbox.com/s/5956267ltb4l14x/tm_guide_entity.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/5956267ltb4l14x/tm_guide_entity.png?raw=1" alt="" /></p>
 <blockquote>
 <p><strong>Note:</strong> In this example both entities have the same set of components, but they do not own the data they just refer to it!</p>
 </blockquote>
@@ -212,7 +212,7 @@ IDs (i.e., weak referencing through <code>is_alive()</code>.</li>
 </ul>
 <h2 id="what-is-an-entity-type--archetype"><a class="header" href="#what-is-an-entity-type--archetype">What is an Entity type / Archetype?</a></h2>
 <p>An Entity Types is a unique combination of component types. The Entity API uses the entity type to group all entities that have the same sets of components.</p>
-<p><img src="https://www.dropbox.com/s/453d1nqrwnsntbw/tm_guide_entity_entity_type.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/453d1nqrwnsntbw/tm_guide_entity_entity_type.png?raw=1" alt="" /></p>
 <blockquote>
 <p><strong>Note:</strong> In this example Entities A-B are of the same entity type while C has a different entity type!</p>
 </blockquote>
@@ -235,7 +235,7 @@ must be copied over to the new type.</li>
 lists, strings, buffers, etc.</li>
 </ul>
 <p>You can add callbacks to the component interface which allow you to perform actions on <code>add</code> and <code>remove</code>. The general lifetime of a component is bound to the Entity Context.</p>
-<p><img src="https://www.dropbox.com/s/1d39bh17zqgeloy/tm_guide_ecs_component.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/1d39bh17zqgeloy/tm_guide_ecs_component.png?raw=1" alt="" /></p>
 <blockquote>
 <p><strong>It's all about the data</strong></p>
 <p>Data is all we have. Data is what we need to transform in order to create a user experience. Data is what we load when we open a document. Data is the graphics on the screen and the pulses from the buttons on your gamepad and the cause of your speakers and headphones producing waves in the air and the method by which you level up and how the bad guy knew where you were to shoot at you and how long the dynamite took to explode and how many rings you dropped when you fell on the spikes and the current velocity of every particle in the beautiful scene that ended the game, that was loaded off the disc and into your life. Any application is nothing without its data. Photoshop without the images is nothing. Word is nothing without the characters. Cubase is worthless without the events. All the applications that have ever been written have been written to output data based on some input data. The form of that data can be extremely complex, or so simple it requires no documentation at all, but all applications produce and need data. (<a href="https://www.dataorienteddesign.com/dodmain/node3.html">Source</a>)</p>
@@ -254,10 +254,10 @@ lists, strings, buffers, etc.</li>
 <p>Can provide a way to allocate data on adding/removing a component</p>
 </li>
 </ul>
-<p><img src="https://www.dropbox.com/s/kre84a4vqouq37z/tm_guide_component_manager.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/kre84a4vqouq37z/tm_guide_component_manager.png?raw=1" alt="" /></p>
 <h2 id="game-logic"><a class="header" href="#game-logic">Game Logic</a></h2>
 <p>The behavior is defined in Systems and Engines which process those components. Systems and Engines can be seen as data transformation actions. They take some input (components) and process them to some output (changed component data, different rendering) and a chain of small systems together makes up your game!</p>
-<p><img src="https://www.dropbox.com/s/5wqvcf27vvx5b7v/engines.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/5wqvcf27vvx5b7v/engines.png?raw=1" alt="" /></p>
 <h3 id="what-are-engines"><a class="header" href="#what-are-engines">What are Engines?</a></h3>
 <blockquote>
 <p><strong>Note</strong>: in some entity systems, these are referred to as <em>systems</em> instead, but we choose <em>engine</em>, because it is less ambiguous.</p>
@@ -274,7 +274,7 @@ lists, strings, buffers, etc.</li>
 Before running, an engine waits for the previous engines that wrote to the components that the
 engine is interested in.</p>
 <p>The following image shows how a time based movement System could look like:</p>
-<p><img src="https://www.dropbox.com/s/vn3n7ai2y28u695/tm_guide_ecs_engine_flow.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/vn3n7ai2y28u695/tm_guide_ecs_engine_flow.png?raw=1" alt="" /></p>
 </li>
 </ul>
 <h3 id="what-are-systems"><a class="header" href="#what-are-systems">What are Systems?</a></h3>
@@ -291,7 +291,7 @@ engine is interested in.</p>
 </ul>
 <h2 id="how-are-entity-assets-translated-to-ecs-entities"><a class="header" href="#how-are-entity-assets-translated-to-ecs-entities">How are Entity Assets translated to ECS Entities?</a></h2>
 <p>Since the Truth is an editor concept and our main data model, your scene is stored in the Truth. When you start the simulation your Assets get translated to the ECS via the <code>asset_load()</code> function. In your <a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#structtm_component_i"><code>tm_component_i</code></a> you can provide this function if you want your component to translate to the ECS world. In there you have access to the Truth, afterwards not anymore. Besides, you can provide some other callbacks for different stages of the translation process. </p>
-<p><img src="https://www.dropbox.com/s/ao6cs4fpyx9i078/truth_ecs%20%282%29.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/ao6cs4fpyx9i078/truth_ecs%20%282%29.png?raw=1" alt="" /></p>
 <blockquote>
 <p><strong>Important:</strong> A Component representation in The Truth may <strong>not</strong> reflect the runtime ECS representation. This can be used to separate a Truth representation into smaller bits for gameplay programming sake but keep the simplicity for the Front End user.</p>
 </blockquote>
