--- a/gameplay_coding/ecs/what_are_components.html
+++ b/gameplay_coding/ecs/what_are_components.html
@@ -167,7 +167,7 @@
 lists, strings, buffers, etc.</li>
 </ul>
 <p>You can add callbacks to the component interface which allow you to perform actions on <code>add</code> and <code>remove</code>. The general lifetime of a component is bound to the Entity Context.</p>
-<p><img src="https://www.dropbox.com/s/1d39bh17zqgeloy/tm_guide_ecs_component.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/1d39bh17zqgeloy/tm_guide_ecs_component.png?raw=1" alt="" /></p>
 <blockquote>
 <p><strong>It's all about the data</strong></p>
 <p>Data is all we have. Data is what we need to transform in order to create a user experience. Data is what we load when we open a document. Data is the graphics on the screen and the pulses from the buttons on your gamepad and the cause of your speakers and headphones producing waves in the air and the method by which you level up and how the bad guy knew where you were to shoot at you and how long the dynamite took to explode and how many rings you dropped when you fell on the spikes and the current velocity of every particle in the beautiful scene that ended the game, that was loaded off the disc and into your life. Any application is nothing without its data. Photoshop without the images is nothing. Word is nothing without the characters. Cubase is worthless without the events. All the applications that have ever been written have been written to output data based on some input data. The form of that data can be extremely complex, or so simple it requires no documentation at all, but all applications produce and need data. (<a href="https://www.dataorienteddesign.com/dodmain/node3.html">Source</a>)</p>
