--- a/graphics/lighting/ambient_occlusion.html
+++ b/graphics/lighting/ambient_occlusion.html
@@ -156,15 +156,15 @@
                     <main>
                         <h1 id="ambient-occlusion"><a class="header" href="#ambient-occlusion">Ambient Occlusion</a></h1>
 <p>Ambient Occlusion is an effect as part of global illumination that approximates the attenuation of light due to occlusion. </p>
-<p><img src="https://www.dropbox.com/s/9hemw29ib130jf3/tm_tut_ssao.png?dl=1" alt="SSAO" /></p>
+<p><img src="https://www.dropbox.com/s/9hemw29ib130jf3/tm_tut_ssao.png?raw=1" alt="SSAO" /></p>
 <p>The easiest way to get AO in your scene is by adding SSAO component which is a method that calculates ambient occlusion in screen space using the depth and normal buffer from the GBuffer rendering pass.</p>
 <table><thead><tr><th style="text-align: left"><strong>Property</strong></th><th style="text-align: left"><strong>Description</strong></th></tr></thead><tbody>
 <tr><td style="text-align: left">Radius</td><td style="text-align: left">Defines the sample radius in world space units. Larger radius needs more step count to be more correct but higher step count can hurt performance. Having larger radius also makes cutoffs on the edges of the screen more visible because screen space effects don't have scene information outside of screen.</td></tr>
-<tr><td style="text-align: left"></td><td style="text-align: left"> <img src="https://www.dropbox.com/s/pcekns9g3qbzh5d/tm_tut_ssao_radius_comp.png?dl=1" alt="SSAO radius compare" /> <em>SSAO with radius set to 1(Left)   SSAO with radius set to 5(Right)</em></td></tr>
+<tr><td style="text-align: left"></td><td style="text-align: left"> <img src="https://www.dropbox.com/s/pcekns9g3qbzh5d/tm_tut_ssao_radius_comp.png?raw=1" alt="SSAO radius compare" /> <em>SSAO with radius set to 1(Left)   SSAO with radius set to 5(Right)</em></td></tr>
 <tr><td style="text-align: left">Power</td><td style="text-align: left">Controls the strength of the darkening effect that, increases the contrast.</td></tr>
-<tr><td style="text-align: left"></td><td style="text-align: left"> <img src="https://www.dropbox.com/s/ktp9l66mmqptrrk/tm_tut_ssao_power_comp.png?dl=1" alt="SSAO power compare" /> <em>SSAO with power set to 1.5(Left)   SSAO with power set to 3.0(Right)</em></td></tr>
+<tr><td style="text-align: left"></td><td style="text-align: left"> <img src="https://www.dropbox.com/s/ktp9l66mmqptrrk/tm_tut_ssao_power_comp.png?raw=1" alt="SSAO power compare" /> <em>SSAO with power set to 1.5(Left)   SSAO with power set to 3.0(Right)</em></td></tr>
 <tr><td style="text-align: left">Bias</td><td style="text-align: left">Depth buffer precision in the distance and high-frequency details in normals can cause some artifacts and noise. This parameter allows you to tweak it. But higher value will reduce details.</td></tr>
-<tr><td style="text-align: left"></td><td style="text-align: left"> <img src="https://www.dropbox.com/s/m1h2qic1g7fpwh0/tm_tut_ssao_bias_comp.png?dl=1" alt="SSAO power compare" /> <em>SSAO with bias set to 0.0(Left)   SSAO with bias set to 0.1(Right)</em></td></tr>
+<tr><td style="text-align: left"></td><td style="text-align: left"> <img src="https://www.dropbox.com/s/m1h2qic1g7fpwh0/tm_tut_ssao_bias_comp.png?raw=1" alt="SSAO power compare" /> <em>SSAO with bias set to 0.0(Left)   SSAO with bias set to 0.1(Right)</em></td></tr>
 <tr><td style="text-align: left">Step Count</td><td style="text-align: left">The number of depth samples for each sample direction. This property has direct corelation with performance. Keeping it in 4-6 range will result optimal performance/quality ratio.</td></tr>
 </tbody></table>
 <h2 id="technical-details"><a class="header" href="#technical-details">Technical Details</a></h2>
