--- a/tutorials/physics/index.html
+++ b/tutorials/physics/index.html
@@ -160,14 +160,14 @@
 </blockquote>
 <p>In this section we will discuss some of the Samples in more detail. </p>
 <p>You can download the Physics Sample projects from the Download Tab: <strong>Help → Download Sample Projects</strong> </p>
-<p><img src="https://www.dropbox.com/s/1w81dsmhazf6pfn/tm_tut_physics_sample_download.png?dl=1" alt="Where to find the samples" /></p>
+<p><img src="https://www.dropbox.com/s/1w81dsmhazf6pfn/tm_tut_physics_sample_download.png?raw=1" alt="Where to find the samples" /></p>
 <p>After you have downloaded the Physics Sample Project, you can open it:</p>
-<p><img src="https://www.dropbox.com/s/igj4b4ao1ntb4zw/tm_tut_physics_scenes.png?dl=1" alt="Where to find the scene" /></p>
+<p><img src="https://www.dropbox.com/s/igj4b4ao1ntb4zw/tm_tut_physics_scenes.png?raw=1" alt="Where to find the scene" /></p>
 <p>The <code>Scenes</code> folder contains all sample scenes (entities). Double click on a sample scene of your choice to load it.</p>
 <p>Each of the Sample Scenes is composed of multiple Entity Prototypes. You can find them in the <code>Special Objects</code> or in the <code>Shapes</code> folder:</p>
-<p><img src="https://www.dropbox.com/s/cafrzpkal6sd1y7/tm_tut_physics_special_objects.png?dl=1" alt="Special Objects folder" /></p>
+<p><img src="https://www.dropbox.com/s/cafrzpkal6sd1y7/tm_tut_physics_special_objects.png?raw=1" alt="Special Objects folder" /></p>
 <p><em>Special Objects</em> are entities with Graph Components attached that have associated logic.</p>
-<p><img src="https://www.dropbox.com/s/og7wipthmw1hl7d/tm_tut_physics_shapes.png?dl=1" alt="" /></p>
+<p><img src="https://www.dropbox.com/s/og7wipthmw1hl7d/tm_tut_physics_shapes.png?raw=1" alt="" /></p>
 <p><em>Shapes</em> are reused Entities to demonstrate different kind of Physic Bodies.</p>
 <blockquote>
 <p><strong>Note:</strong> If you change the Prototypes, all the instances will change as well. Keep this in mind when playing around with the samples. If you mess things up, you can always re-download a fresh sample project.</p>
