--- a/writing_an_executable.html
+++ b/writing_an_executable.html
@@ -160,14 +160,14 @@ initialization code for booting up all the systems that you want to use as well 
 code that runs the executable.</p>
 <p><code>bin/simple-draw.exe</code> is a sample executable that uses the UI / Draw2D interfaces of The Machinery
 to implement a simple drawing program:</p>
-<p><img src="https://www.dropbox.com/s/bilirde9yud4rn3/simple-draw.png?dl=1" alt="Simple Draw executable." /></p>
+<p><img src="https://www.dropbox.com/s/bilirde9yud4rn3/simple-draw.png?raw=1" alt="Simple Draw executable." /></p>
 <p>The source code of this sample program is available in the <code>samples</code> directory. By playing with
 and modifying this, you can see how to build your own applications on top of <em>The Machinery</em>.</p>
 <p>Note that just as when writing plugins, you need a Visual Studio installation (2019) to build an
 executable. You need to set <code>TM_SDK_DIR</code> to the location of The Machinery SDK you are using, and you
 use <code>tmbuild.exe</code> to build the executable.</p>
 <p><code>bin/simple-3d.exe</code> is a sample executable that uses the full 3D API.</p>
-<p><img src="https://www.dropbox.com/s/oz9zob150yksnhr/simple-3d.png?dl=1" alt="Simple 3D executable." /></p>
+<p><img src="https://www.dropbox.com/s/oz9zob150yksnhr/simple-3d.png?raw=1" alt="Simple 3D executable." /></p>
 <p>You will find the source code for this too in the samples directory.</p>
 
                     </main>
